<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PrincipalActivity"
    style="@android:style/Theme.Black"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/lblCalculadora"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:typeface="normal"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblPrimeiroOcteto"
        android:id="@+id/lblPrimeiroOcteto"
        android:layout_below="@+id/imgLogo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtPrimeiroOcteto"
        android:layout_below="@+id/lblPrimeiroOcteto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/lblPrimeiroOcteto"
        android:layout_alignEnd="@+id/lblPrimeiroOcteto"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblRestanteIP"
        android:id="@+id/lblRestanteIP"
        android:layout_alignBottom="@+id/txtPrimeiroOcteto"
        android:layout_toRightOf="@+id/txtPrimeiroOcteto"
        android:layout_toEndOf="@+id/txtPrimeiroOcteto" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/lblCalcular"
        android:id="@+id/btnCalcular"
        android:layout_alignBottom="@+id/lblRestanteIP"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblInformacoesDaRede"
        android:id="@+id/lblInformacoesDaRede"
        android:layout_below="@+id/txtPrimeiroOcteto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblClasse"
        android:id="@+id/lblClasse"
        android:layout_below="@+id/lblInformacoesDaRede"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblCidr"
        android:id="@+id/lblCidr"
        android:layout_below="@+id/lblClasse"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignTop="@+id/lblCidr"
        android:layout_alignLeft="@+id/lblInformacoesDaRede"
        android:layout_alignStart="@+id/lblInformacoesDaRede"
        android:layout_alignRight="@+id/lblRestanteIP"
        android:layout_alignEnd="@+id/lblRestanteIP" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblMascaraDeRede"
        android:id="@+id/lblMascaraDeRede"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/lblMascaraDeRede"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20dp"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

</RelativeLayout>
